--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,17 @@
 .patternPadding{
   padding-bottom: 100px;
 }
+
+.shadow {
+  width: 100%;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  display: block;
+}
+
+.clickableLink{
+  color: #3c97bf;
+  position: absolute;
+  right: 0px;
+  padding-right: 10px;
+  padding-left: 20px;
+}
