--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -14,13 +14,13 @@ video {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /*box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);*/
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
     object-fit: contain;
 }
 
 .hero-container > h1 {
     color: #fff;
-    font-size: 100px;
+    font-size: 50px;
     margin-top: -100px;
 }
 
@@ -28,6 +28,7 @@ video {
     margin-top: 8px;
     color: #fff;
     font-size: 32px;
+    text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
 }
@@ -43,18 +44,24 @@ video {
 .fa-play-circle {
     margin-left: 4px;
 }
+.btn-mobile-only {
+    display: none;
+}
 
 @media screen and (max-width: 960px) {
     .hero-container > h1 {
         font-size: 70px;
         margin-top: -150px;
     }
+    .btn-mobile {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 768px) {
     .hero-container > h1 {
         font-size: 50px;
-        margin-top: -100px;
+        margin-top: -50px;
     }
 
     .hero-container > p {
@@ -65,7 +72,12 @@ video {
         display: block;
         text-decoration: none;
     }
-
+    .btn-mobile-only {
+        display: block;
+    }
+    .btn-desktop{
+        display: none;
+    }
     .width {
         width: 100%;
     }
