--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,10 +1,10 @@
 .navbar {
-  background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+  background-color : #041524;
   height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.2rem;
+  font-size: 16px;
   position: sticky;
   top: 0;
   z-index: 999;
