--- a/src/components/RegisterForm.css
+++ b/src/components/RegisterForm.css
@@ -295,6 +295,23 @@ footer a {
     /*display: none;*/
     visibility: hidden;
 }
+.alert {
+    padding: 20px;
+    background-color: #f44336;
+    color: white;
+    margin-bottom: 20px;
+}
+
+.alert-closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
 @keyframes fadeInOpacity {
     0% {
         opacity: 0;
