--- a/src/components/AdminForms.css
+++ b/src/components/AdminForms.css
@@ -15,3 +15,10 @@
 .admin-form{
     min-height: 480px;
 }
+ .select{
+     background-color: #eee;
+     border: none;
+     padding: 12px 15px;
+     margin: 8px 0;
+     width: 100%;
+ }
