--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -3,6 +3,11 @@
   background: #fff;
 }
 
+.cards-book-list {
+  padding:4rem;
+  background-image: radial-gradient(white, #042440);;
+}
+
 h1 {
   text-align: center;
 }
@@ -57,8 +62,8 @@ h1 {
   width: 100%;
   padding-top: 67%;
   overflow: hidden;
-
 }
+
 .fade-img {
   animation-name: fade-img;
   animation-duration: 2s;
@@ -100,6 +105,7 @@ h1 {
 
 .cards__item__info {
   padding: 20px 30px 30px;
+  background: #FFFFFF;
 }
 
 .cards__item__text {
